Update and rename index.html.html to index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <body>
         <img src="photography/紫金港 中1.jpg" alt="" class="banner"/>
         <div class="nav">
-            <a href="index.html.html" class="active">网站首页</a>
+            <a href="index.html" class="active">网站首页</a>
             <a href="web/02_juese.html">学校介绍</a>
             <a href="web/03_photos.html">招生情况</a>
             <a href="web/04_juqing.html">校园生活</a>
