--- a/web/02_juese.html
+++ b/web/02_juese.html
@@ -75,7 +75,7 @@
 <body>
     <img src="../photography/秋日街道.jpg" alt="" class="banner"/>
     <div class="nav">
-        <a href="../index.html.html">网站首页</a>
+        <a href="../index.html">网站首页</a>
         <a href="02_juese.html" class="active">学校介绍</a>
         <a href="03_photos.html">招生情况</a>
         <a href="04_juqing.html">校园生活</a>
