--- a/web/03_photos.html
+++ b/web/03_photos.html
@@ -37,7 +37,7 @@
 <body>
     <img src="../photography/傍晚的紫金港.jpg" alt="" class="banner"/>
     <div class="nav">
-        <a href="../index.html.html">网站首页</a>
+        <a href="../index.html">网站首页</a>
         <a href="02_juese.html" >学校介绍</a>
         <a href="03_photos.html" class="active">招生情况</a>
         <a href="04_juqing.html">校园生活</a>
