--- a/web/04_juqing.html
+++ b/web/04_juqing.html
@@ -67,7 +67,7 @@
 <body>
     <img src="../photography/秋日夜景2.jpg" alt="" class="banner"/>
     <div class="nav">
-        <a href="../index.html.html">网站首页</a>
+        <a href="../index.html">网站首页</a>
         <a href="02_juese.html" >学校介绍</a>
         <a href="03_photos.html">招生情况</a>
         <a href="04_juqing.html" class="active">校园生活</a>
