--- a/web/05_Abouts.html
+++ b/web/05_Abouts.html
@@ -39,7 +39,7 @@
 <body>
     <img src="../photography/紫金港 晚2.jpg" alt="" class="banner"/>
     <div class="nav">
-        <a href="../index.html.html">网站首页</a>
+        <a href="../index.html">网站首页</a>
         <a href="02_juese.html">角色介绍</a>
         <a href="03_photos.html">图片相册</a>
         <a href="04_juqing.html">剧情介绍</a>
