--- a/web/05_Abouts.html
+++ b/web/05_Abouts.html
@@ -40,9 +40,9 @@
     <img src="../photography/紫金港 晚2.jpg" alt="" class="banner"/>
     <div class="nav">
         <a href="../index.html">网站首页</a>
-        <a href="02_juese.html">角色介绍</a>
-        <a href="03_photos.html">图片相册</a>
-        <a href="04_juqing.html">剧情介绍</a>
+        <a href="02_juese.html">大学介绍</a>
+        <a href="03_photos.html">招生情况</a>
+        <a href="04_juqing.html">学校生活</a>
         <a href="05_Abouts.html" class="active">关于我们</a>
     </div>
     
